--- a/SolveMazeBMP/SolveMazeBMP.vcxproj.filters
+++ b/SolveMazeBMP/SolveMazeBMP.vcxproj.filters
@@ -27,10 +27,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AStar.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BMP.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
